--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,3 +1,9 @@
+2018-01-18
+new: getMySQL-PasswordParam.sh: Get the password parameter to call MySQL/MariaDB CLI tools
+new: getMySQL-UserParam.sh: Get the user parameter to call MySQL/MariaDB CLI tools
+new: export-dataset.sh: Creates an SQL dump for generating the offline demo from
+cha: dlhttrack: Now makes offline copies in all m23 languages and uploads the copies.
++++++
 2018-01-12
 new: CMSLinkCreator.sh: Creates link files for the CMS for ISO, appliance or RaspBerry Pi image.
 +++++
