--- a/m23/doc/changelog
+++ b/m23/doc/changelog
@@ -1,3 +1,9 @@
+2018-05-29
+cha: getServerNetmask: Commented out unused UCS code.
++++++
+2018-05-24
+cha: UBUNTU_desktopInstall: Now removes snap apps and reinstalls the same tools by normal Debian packages.
++++++
 2018-05-09
 cha: m23instUpload: Now tries 100 times to get proper MD5 sums from the uploaded files before it gives up.
 cha: m23instUpload: Now downloads the m23* packages and makes MD5 check afterwards.
